--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -16,8 +16,10 @@
     "@mui/material": "^5.14.17",
     "@reduxjs/toolkit": "^1.9.7",
     "framer-motion": "^10.16.5",
+    "i18next": "^23.7.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^13.5.0",
     "react-redux": "^8.1.3",
     "swiper": "^11.0.4"
   },
